--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\"",
-    "deploy:github": "npm run build && node ./scripts/deploy-github"
+    "deploy:github": "npm run build && mode ./scripts/create-CNAME && node ./scripts/deploy-github"
   },
   "repository": {
     "type": "git",
